# advent-of-code-2023

./: .gitignore  Cargo.toml
hs/: hs.cabal
ocaml/: dune-workspace
ocaml/lib/: input.ml  util.ml
src/: day-01.rs  day-02.rs  day-03.rs  day-04.rs  day-05.rs  day-06.rs  test.rs
